--- a/TradeHubGui/Views/DataDownloaderView.xaml
+++ b/TradeHubGui/Views/DataDownloaderView.xaml
@@ -6,7 +6,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="700" d:DesignWidth="1200"
+             d:DesignHeight="800" d:DesignWidth="1200"
              Tag="DATA DOWNLOADER">
 
     <UserControl.Resources>
@@ -36,7 +36,7 @@
                                     <CheckBox Content="Write CSV" IsChecked="{Binding WriteCsv}"/>
                                 </StackPanel>
 
-                                <TextBlock DockPanel.Dock="Top" Margin="10,25,10,0" Text="Select symbol to customize bar settings"/>
+                                <TextBlock DockPanel.Dock="Top" Margin="10,25,10,0" Text="Select symbol to customize bar settings:"/>
 
                                 <DataGrid x:Name="OrderDetailsDataGrid" MaxWidth="500" Margin="10"
                                       ItemsSource="{Binding Instruments}"
