--- a/TradeHubGui/Views/LimitOrderBookWindow.xaml
+++ b/TradeHubGui/Views/LimitOrderBookWindow.xaml
@@ -2,50 +2,36 @@
                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                  xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-                 xmlns:conv="clr-namespace:TradeHubGui.Converters"
-                 xmlns:componentModel="clr-namespace:System.ComponentModel;assembly=WindowsBase"
                  GlowBrush="Silver"
                  ShowInTaskbar="True"
                  WindowStartupLocation="CenterOwner"
-                 Background="{StaticResource BaseBackground}"
+                 Background="White"
                  Width="350" Height="400"
                  MinWidth="200" MinHeight="200">
 
-    <mah:MetroWindow.Resources>
-        <conv:LobValueToStringConverter x:Key="LobValueToString"/>
-        <CollectionViewSource Source="{Binding LimitOrderBookRecords}" x:Key="cvs">
-            <CollectionViewSource.SortDescriptions>
-                <componentModel:SortDescription PropertyName="AskPrice" />
-            </CollectionViewSource.SortDescriptions>
-        </CollectionViewSource>
-    </mah:MetroWindow.Resources>
+    <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+        <StackPanel Margin="10">
+            <ItemsControl ItemsSource="{Binding AskRecords}" Margin="100,0,0,0" VirtualizingPanel.IsVirtualizing="True">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal" TextBlock.TextAlignment="Right" TextBlock.Foreground="{StaticResource RedBrush}" TextBlock.FontWeight="SemiBold" Margin="2" >
+                            <TextBlock Text="{Binding AskPrice}" Width="50"/>
+                            <TextBlock Text="{Binding AskQuantity}" Width="50"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+            <ItemsControl ItemsSource="{Binding BidRecords}" VirtualizingPanel.IsVirtualizing="True">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal" TextBlock.TextAlignment="Right" TextBlock.Foreground="{StaticResource GreenBrush}" TextBlock.FontWeight="SemiBold" Margin="2" >
+                            <TextBlock Text="{Binding BidQuantity}" Width="50"/>
+                            <TextBlock Text="{Binding BidPrice}" Width="50"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </StackPanel>
+    </ScrollViewer>
 
-    <DockPanel Background="#FFEEEEEE">
-
-        <DataGrid x:Name="LobDataGrid" 
-                  ItemsSource="{Binding Source={StaticResource cvs}}"
-                  SelectionMode="Single" 
-                  IsTextSearchEnabled="True"
-                  IsSynchronizedWithCurrentItem="True"
-                  CanUserAddRows="False" CanUserDeleteRows="False"
-                  CanUserResizeRows="False" CanUserSortColumns="False"
-                  IsReadOnly="True"
-                  SelectionUnit="FullRow"
-                  AutoGenerateColumns="False"
-                  RowHeight="22"
-                  SelectionChanged="DataGrid_SelectionChanged">
-
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="Bid size" Width="*" Binding="{Binding Path=BidQuantity, Converter={StaticResource LobValueToString}}" Foreground="{StaticResource RedBrush}" FontWeight="SemiBold"
-                                    HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}" CellStyle="{StaticResource RightAlignedCellStyle}"/>
-                <DataGridTextColumn Header="Bid price" Width="*" Binding="{Binding Path=BidPrice, Converter={StaticResource LobValueToString}}" Foreground="{StaticResource RedBrush}" FontWeight="SemiBold"
-                                    HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}" CellStyle="{StaticResource RightAlignedCellStyle}"/>
-                <DataGridTextColumn Header="Ask price" Width="*" Binding="{Binding Path=AskPrice, Converter={StaticResource LobValueToString}}" Foreground="{StaticResource GreenBrush}" FontWeight="SemiBold"
-                                    HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}" CellStyle="{StaticResource RightAlignedCellStyle}"/>
-                <DataGridTextColumn Header="Ask size" Width="*" Binding="{Binding Path=AskQuantity, Converter={StaticResource LobValueToString}}" Foreground="{StaticResource GreenBrush}" FontWeight="SemiBold"
-                                    HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}" CellStyle="{StaticResource RightAlignedCellStyle}"/>
-            </DataGrid.Columns>
-        </DataGrid>
-
-    </DockPanel>
 </mah:MetroWindow>
