--- a/TradeHubGui/Views/MarketScannerWindow.xaml
+++ b/TradeHubGui/Views/MarketScannerWindow.xaml
@@ -8,8 +8,9 @@
                  WindowStartupLocation="CenterScreen"
                  Background="{StaticResource BaseBackground}"
                  Icon="{StaticResource imgMarketDataScanner}"
-                 Width="700" Height="400"
-                 MinWidth="200" MinHeight="200">
+                 Width="760" Height="400"
+                 MinWidth="200" MinHeight="200"
+                 FocusManager.FocusedElement="{Binding ElementName=NewSymbolTextBox}">
     <mah:MetroWindow.IconTemplate>
         <DataTemplate>
             <Image Height="20" Width="20" Source="{StaticResource imgMarketDataScanner}"/>
@@ -22,15 +23,19 @@
 
         <ContextMenu  x:Key="RowContextMenu" DataContext="{Binding PlacementTarget.DataContext, RelativeSource={RelativeSource Self}}">
             <MenuItem Header="Limit Order Book"
-                      CommandParameter="{Binding}"
-                      Command="{Binding DataContext.ShowLimitOrderBookCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=DataGrid}}" />
+                      Command="{Binding DataContext.ShowLimitOrderBookCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" 
+                      CommandParameter="{Binding}"/>
             <MenuItem Header="Chart"
-                      CommandParameter="{Binding}"
-                      Command="{Binding DataContext.ShowChartCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=DataGrid}}" />
+                      Command="{Binding DataContext.ShowChartCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" 
+                      CommandParameter="{Binding}"/>
             <Separator/>
             <MenuItem Header="Send Order"
-                      CommandParameter="{Binding}"
-                      Command="{Binding DataContext.SendOrderCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=DataGrid}}" />
+                      Command="{Binding DataContext.SendOrderCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" 
+                      CommandParameter="{Binding}"/>
+            <Separator/>
+            <MenuItem Header="Delete Symbol"
+                      Command="{Binding DataContext.DeleteSymbolCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" 
+                      CommandParameter="{Binding}"/>
         </ContextMenu>
 
         <Style x:Key="DefaultRowStyle" TargetType="{x:Type DataGridRow}" BasedOn="{StaticResource {x:Type DataGridRow}}">
@@ -53,9 +58,15 @@
 
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="10">
                     <Label Content="Symbol for scannig:"/>
-                    <TextBox Text="{Binding NewSymbol, UpdateSourceTrigger=PropertyChanged}" Width="100" Margin="0,0,10,0"
-                            IsEnabled="{Binding Provider.ConnectionStatus, Converter={StaticResource ConnectionStatusToBool}}"/>
-                    <Button Content="Add" Command="{Binding AddNewSymbolCommand}"/>
+                    <TextBox Name="NewSymbolTextBox" Text="{Binding NewSymbol, UpdateSourceTrigger=PropertyChanged}" Width="100" Margin="0,0,10,0" KeyDown="TextBox_KeyDown"
+                            IsEnabled="{Binding Provider.ConnectionStatus, Converter={StaticResource ConnectionStatusToBool}}">
+                        <TextBox.InputBindings>
+                            <KeyBinding Command="{Binding DataContext.DeleteSymbolCommand, ElementName=MarketDataGrid}"
+                                        CommandParameter="{Binding SelectedItem, ElementName=MarketDataGrid}"
+                                        Key="Delete"/>
+                        </TextBox.InputBindings>
+                    </TextBox>
+                    <Button Content="Add" Command="{Binding AddNewSymbolCommand}" Focusable="False"/>
                 </StackPanel>
             </DockPanel>
         </Border>
@@ -72,19 +83,13 @@
                   SelectionUnit="FullRow"
                   AutoGenerateColumns="False"
                   RowStyle="{StaticResource DefaultRowStyle}">
+            <DataGrid.InputBindings>
+                <KeyBinding Command="{Binding DeleteSymbolCommand}"
+                            CommandParameter="{Binding SelectedItem, ElementName=MarketDataGrid}"
+                            Key="Delete"/>
+            </DataGrid.InputBindings>
 
             <DataGrid.Columns>
-                <DataGridTemplateColumn Width="Auto">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <Button Style="{StaticResource ButtonToolBar}" Focusable="False" ToolTip="Delete symbol"
-                                    Command="{Binding DataContext.DeleteSymbolCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
-                                    CommandParameter="{Binding}">
-                                <Image Width="12" Height="12" Margin="2" Source="{StaticResource imgDelete}" UseLayoutRounding="True"/>
-                            </Button>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
                 <DataGridTextColumn Header="Symbol" Width="70" Binding="{Binding Path=Security.Symbol}" />
                 <DataGridTextColumn Header="Bid quantity" Width="100" Binding="{Binding Path=BidQuantity}" HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}" CellStyle="{StaticResource RightAlignedCellStyle}"/>
                 <DataGridTextColumn Header="Bid price" Width="100" Binding="{Binding Path=BidPrice}" HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}" CellStyle="{StaticResource RightAlignedCellStyle}"/>
@@ -92,6 +97,36 @@
                 <DataGridTextColumn Header="Ask price" Width="100" Binding="{Binding Path=AskPrice}" HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}" CellStyle="{StaticResource RightAlignedCellStyle}"/>
                 <DataGridTextColumn Header="Last" Width="70" Binding="{Binding Path=LastPrice}" HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}" CellStyle="{StaticResource RightAlignedCellStyle}"/>
                 <DataGridTextColumn Header="Volume" Width="70" Binding="{Binding Path=LastQuantity}" HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}" CellStyle="{StaticResource RightAlignedCellStyle}"/>
+                <DataGridTemplateColumn Header="Actions" Width="Auto">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Border Background="#7FFF" Margin="-3,0">
+                                <StackPanel Orientation="Horizontal" Margin="25,0,0,0">
+                                    <Button Style="{StaticResource ButtonToolBar}" Focusable="False" ToolTip="Limit Order Book"
+                                        Command="{Binding DataContext.ShowLimitOrderBookCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
+                                        CommandParameter="{Binding}">
+                                        <Image Width="16" Height="16" Margin="1" Source="{StaticResource imgLOB}" UseLayoutRounding="True"/>
+                                    </Button>
+                                    <Button Style="{StaticResource ButtonToolBar}" Focusable="False" ToolTip="Chart"
+                                        Command="{Binding DataContext.ShowChartCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
+                                        CommandParameter="{Binding}">
+                                        <Image Width="15" Height="15" Margin="1" Source="{StaticResource imgGraph}" UseLayoutRounding="True"/>
+                                    </Button>
+                                    <Button Style="{StaticResource ButtonToolBar}" Focusable="False" ToolTip="Send Order"
+                                        Command="{Binding DataContext.SendOrderCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
+                                        CommandParameter="{Binding}">
+                                        <Image Width="16" Height="16" Margin="1" Source="{StaticResource imgOrder}" UseLayoutRounding="True"/>
+                                    </Button>
+                                    <Button Style="{StaticResource ButtonToolBar}" Focusable="False" ToolTip="Delete Symbol" Margin="15,0,0,0"
+                                        Command="{Binding DataContext.DeleteSymbolCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
+                                        CommandParameter="{Binding}">
+                                        <Image Width="14" Height="14" Margin="2" Source="{StaticResource imgDelete}" UseLayoutRounding="True"/>
+                                    </Button>
+                                </StackPanel>
+                            </Border>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
 
